--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 openai~=0.27.4
-beautifulsoup4
+beautifulsoup4~=4.12.1
 tiktoken~=0.3.3
 python-dotenv~=1.0.0
 google-api-python-client
 duckduckgo-search
-requests
+requests~=2.28.2
+PyYAML~=6.0
