--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,5 @@
 OPENAI_API_KEY=your-openai-api-key
 YOUTUBE_API_KEY=your-youtube-api-key
 SERVICE_ACCOUNT_FILE=your-youtube-service-account-file.json
+CURRENT_MODE=can-be-python-or-server
 ```
