added voice support

--- a/.env.template
+++ b/.env.template
@@ -2,4 +2,6 @@ OPENAI_API_KEY=your-openai-api-key
 YOUTUBE_API_KEY=your-youtube-api-key
 SERVICE_ACCOUNT_FILE=your-youtube-service-account-file.json
 CURRENT_MODE=can-be-python-or-server
+ELEVENLABS_API_KEY=your-elevenlabs-api-key
+
 ```
