--- a/requirements.txt
+++ b/requirements.txt
@@ -57,3 +57,7 @@ yarl==1.8.2
 youtube-transcript-api==0.5.0
 fastapi~=0.95.0
 uvicorn==0.21.1
+playsound~=1.3.0
+starlette~=0.26.1
+gTTS~=2.3.1
+PyObjC
