--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-typing-effect": "^2.0.5",
+    "strip-json-trailing-commas": "^1.1.0",
     "styled-components": "^5.3.9",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
