--- a/.env.template
+++ b/.env.template
@@ -3,5 +3,7 @@ YOUTUBE_API_KEY=your-youtube-api-key
 SERVICE_ACCOUNT_FILE=your-youtube-service-account-file.json
 CURRENT_MODE=can-be-python-or-server
 ELEVENLABS_API_KEY=your-elevenlabs-api-key
+SERPER_API_KEY=your-serper-api-key
+```
 
 ```
